--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/souravkl11/raganork-md.git"
+    "url": "https://github.com/silent-zorro/whatsapp-bot"
   },
   "keywords": [
     "whatsapp",
